Scrollbar for mobile view fixed (.allcontacts margin top added for padding top) and z index for header added

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -11,11 +11,11 @@
 
 .allContacts {
     position: relative;
-    overflow-y: auto;
-    padding-top: 100px;
+    overflow-y: auto;    
     padding-bottom: 60px;
     height: 100vh;
     width: 100vw;
+    margin-top: 80px;
 }
 
 .addContactButtonContainerMobile {
@@ -545,7 +545,7 @@
 /* Desktop view */
 /*-----------------------------------------------------------------------------------------------------------------------*/
 
-@media only screen and (max-width: 2500px) and (min-width: 760px) {
+@media only screen and (max-width: 2500px) and (min-width: 950px) {
     .allContacts {        
         position: relative;
         overflow-y: auto;
