--- a/css/header.css
+++ b/css/header.css
@@ -5,6 +5,7 @@
     right: 0;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);  /* box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px; */
     background-color: var(--white-color);
+    z-index: 10;
 }
 
 .header-gap {
@@ -30,5 +31,5 @@
     justify-content: center;
     align-items: center;
     font-weight: bold;
-    color: var(--mockup-highlight);
+    color: var(--mockup-highlight);    
 }
